styles/styles.css
/* ... */
#navbarDropdown[aria-expanded='true'] {
    background-color: var(--nav-hover-color);
    border-bottom: solid 4px  #D14900 !important;
}

.dropdown{
    width: 250px !important;
}

.dropdown-menu {
    background: var(--bg-color-primary) !important;
    border-radius: unset !important;
    width: 250px !important;
}

.dropdown-item {
    color: var(--font-color) !important;
    border-bottom: none !important;
}

.dropdown-item:hover {
    background: var(--dropdown-item-hover);
    color: var(--header-color) !important;
    text-decoration: underline var(--header-color);
}

.dropdown-item:hover {
    border-bottom: none !important;
}

.dark-switch-outer{
    position: relative;
    width: 100%;
}

.welcome-outer{
    position: absolute;
    right: 30px;
    top: 20px;
    min-width: 200px;

    .dropdown-item:hover{
        background-color: transparent;
        text-decoration: none;
    }
    .dropdown-item{
        width: auto;

    }
}

.logout-outer{
    position: absolute;
}

#user-dropdown{
    border: none !important;
}

.user-menu-label{
    color: var(--font-color);
    font-family: BigNoodle, sans-serif;
    font-size: 1.4rem;
}

.btn-log-in-out{
    background-color: var(--submit-color);
    border: 1px solid var(--submit-border-color) !important;
    border-radius: 2px;
    color: var(--submit-text-color) !important;
    font-weight: 600;
    font-size: 0.8rem;
    padding: 4px 8px;
    width: 80px;
}

.btn-log-in-out:disabled{
    background-color: var(--disabled-btn-bg-color) !important;
    border: 1px solid var(--disabled-btn-font-color) !important;
    color: var(--disabled-btn-font-color) !important;
}

.btn-log-in-out:hover{
    background-color: var(--submit-hover-color);
    text-decoration: none;
    border: 1px solid var(--submit-border-hover-color) !important;
    color: var(--submit-text-hover-color) !important;
    transition: .75s;
}

.btn-log-in-out:hover:disabled{
    background-color: var(--disabled-btn-bg-color) !important;
    border: 1px solid var(--disabled-btn-font-color) !important;
    color: var(--disabled-btn-font-color) !important;
}

.btn-log-in-out a:visited{
    color: var(--submit-text-color);
}

#date-format-select{
    width: 100px;
    font-size: 0.7rem;
    padding: .1rem .1rem .1rem .5rem !important;
    background-image: var(--select-icon-img);
}

.form-select{
    background-image: var(--select-icon-img);
}



/*********************** dark mode **************************/ /*********************** dark mode **************************/
/*********************** dark mode **************************/ /*********************** dark mode **************************/

#dark-mode-list-item{
    margin-left: auto;
    min-height: 32px;
}

#dark-mode-list-item > div {
    padding-top: 15px;
}

#dark-mode-list-item input[type="checkbox"]{
    display:none;
}

#dark-mode-list-item label{
    position:absolute;
    right:10px;
    background-color: var(--dark-mode-toggle-bg);
    border-radius:30px;
    cursor:pointer;
}
.fa-sun, .fa-moon{
    font-size:12px;
    transition:.3s;
    border-radius: 50%;
    padding: 4px 4px 4px 4px;
    margin-top: 2px;
    margin-bottom: 2px;
    width: 20px;
    height: 20px;
}
.fa-sun{
    color: black;
    transform:translateX(22px);
    background-color: #ffd500;
}
.fa-moon{
    color: white;
    transform:translateX(0px);
    opacity:0;
    background-color: black;
}

#dark-mode-switch{
    width: 130px;
}

#dark-mode-switch:checked ~ label > .fa-sun{
    opacity:0;
    transform:translateX(0px);
}

#dark-mode-switch:checked ~ label > .fa-moon{
    opacity:1;
    transform:translateX(-22px);
}

/*********************** forms **************************/ /*********************** forms **************************/
/*********************** forms **************************/ /*********************** forms **************************/
.form-body {
    width: 80%;
}

.form-header {
    width: 70%;
    background-color: var(--form-header-color);
    border: solid 1px var(--form-outline-color);
    border-bottom: none;
    margin: 3rem auto 0 auto;
    padding: 1rem;
}

.form-container {
    width: 70%;
    border: solid 1px var(--form-outline-color);
    display: flex;
    justify-content: center;
    margin: 0 auto 3rem auto;
}

.form-container, .app-list, .user-list, .app-list-admin, .date-list, .announcements-list{
    & input, & textarea, .input-group-text, .input-group, .form-select{
        background-color: var(--form-input-color) !important;
        border-color: var(--form-outline-color);
        color: var(--font-color) !important;
        border-radius: 4px;
    }

    input:-webkit-autofill,
    input:-webkit-autofill:hover,
    input:-webkit-autofill:focus,
    input:-webkit-autofill:active{
        background-color: var(--form-input-color) !important;
        -webkit-background-clip: text;
        -webkit-text-fill-color: var(--font-color) !important;
    }

    ::placeholder, select, input[type='date']  {
        color: var(--placeholder-font-color) !important;
    }

    input:checked {
        background-color: #D14900 !important;
        border-color: #D14900;
        box-shadow: 0 0 0 3px rgba(209, 73, 0, 0.43);
    }

    i {
        color: var(--font-color);
    }

}

#application-status {
    padding: 0.5rem;
    border: solid 1px var(--form-outline-color);
    border-radius: 0.375rem;

    background-color: var(--form-input-color);
}


.form-label {
    color: var(--header-color);
    font-weight: 600;
    min-width: 200px;
}

.submit-btn {
    background-color: var(--submit-color);
    border: 1px solid var(--submit-border-color);
    border-radius: 2px;
    color: var(--submit-text-color);
    font-weight: 600;
    padding: 7px 10px 7px 10px;
}
/* ... */

